backon-macros/tests/cases/fail_adjust_blocking.stderr
error: `adjust` is only available for async functions
 --> tests/cases/fail_adjust_blocking.rs:8:4
  |
8 | fn invalid_blocking() -> Result<(), &'static str> {
  |    ^^^^^^^^^^^^^^^^

error[E0425]: cannot find function `invalid_blocking` in this scope
  --> tests/cases/fail_adjust_blocking.rs:13:13
   |
13 |     let _ = invalid_blocking();
   |             ^^^^^^^^^^^^^^^^ not found in this scope
